[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/battle_sys/hurtbox.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/Enemies/Haniwa/Haniwa_bow.png" type="Texture" id=2]
[ext_resource path="res://enemy/Haniwa_archer/haniwa_archer.gd" type="Script" id=3]
[ext_resource path="res://enemy/Haniwa_archer/states/idle.gd" type="Script" id=4]
[ext_resource path="res://enemy/Haniwa_archer/states/dead.gd" type="Script" id=5]
[ext_resource path="res://enemy/Haniwa_archer/states/attack.gd" type="Script" id=6]
[ext_resource path="res://assets/audio/enemy/se_plst00.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 32 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
uniform bool is_white;

void fragment(){
	COLOR = texture(TEXTURE, UV);
	if(is_white){
		vec4 new_texture;
		if(COLOR.a > 0.0){
			new_texture = vec4(1.0, 1.0, 1.0, 1.0);
		}
		else{
			new_texture = vec4(1.0, 1.0, 1.0, 0.0);
		}
		COLOR = new_texture;
	}
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/is_white = false

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 96, 16 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 28 )

[sub_resource type="Animation" id=6]
resource_name = "attack"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "death"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=9]
resource_name = "disappear"
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.2
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:material:shader_param/is_white")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="haniwa_archer" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="physic_collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -32 )
shape = SubResource( 1 )

[node name="rotator" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="rotator"]
material = SubResource( 3 )
position = Vector2( 8, -40 )
texture = ExtResource( 2 )
hframes = 5
vframes = 5

[node name="player_detect" type="Area2D" parent="rotator"]
collision_layer = 0
collision_mask = 128

[node name="collider" type="CollisionShape2D" parent="rotator/player_detect"]
position = Vector2( 96, -40 )
shape = SubResource( 4 )

[node name="arrow_spawn" type="Position2D" parent="."]
position = Vector2( 8, -40 )

[node name="hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )

[node name="collider" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 0, -32 )
shape = SubResource( 5 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( 1.90735e-06, -32 )
scale = Vector2( 8.85, 3.05 )
freeze_bodies = false
pause_particles = false
pause_animated_sprites = false
physics_process_parent = true

[node name="anim" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 6 )
anims/death = SubResource( 7 )
anims/idle = SubResource( 8 )

[node name="anim_fx" type="AnimationPlayer" parent="."]
anims/disappear = SubResource( 9 )
anims/hit = SubResource( 10 )

[node name="states" type="Node" parent="."]

[node name="idle" type="Node" parent="states"]
script = ExtResource( 4 )

[node name="dead" type="Node" parent="states"]
script = ExtResource( 5 )

[node name="attack" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "fx"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "fx"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="body_entered" from="rotator/player_detect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_exited" from="rotator/player_detect" to="." method="_on_player_detect_body_exited"]
